--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src='script.js' defer>
-
-    </script>
+    <script src='script.js' defer></script>
+    <p></p>
 </body>
 </html>
